Fri Oct 25 03:34:47 1996  Jim Blandy  <jimb@floss.cyclic.com>

	* boot-9.scm (%read-sharp): Don't recognize the `#!' syntax here;
	that's now taken care of in libguile, and in a way compatible with
	SCSH (which this isn't).

Mon Oct 21 18:52:36 1996  Jim Blandy  <jimb@totoro.cyclic.com>

	* boot-9.scm: Formatting tweaks.

Fri Oct 18 01:03:08 1996  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* boot-9.scm (handle-system-error): Added hooks before-error-hook,
 	after-error-hook, before-backtrace-hook and after-backtrace-hook
 	to the error handler.  E.g.: fancy emacs support could plug into
 	these.
	(save-stack): New function.  The stack is now made differently
 	depending on the stack id.  (The motivation is to make a better
 	choice regarding what stack frames to present to the user.)
	(error-catching-loop): Stack handling code moved outside into
 	save-stack.

Thu Oct 17 20:33:08 1996  Gary Houston  <ghouston@actrix.gen.nz>

	* Makefile.in (scm_files): add expect.scm.

	* expect.scm: new file ported from guile-iii.

	* boot-9.scm: remove handle-system-error, after moving the code into
	error-catching-loop.
	Don't set 'throw-handler-default property on error keys.
	Just interpret (almost) any throw with 4 args as an error throw.
	Delete some try-load stuff that was already commented out.

	Second thoughts, keep handle-system-error but call it from
	error-catching-loop.

Tue Oct 15 17:07:20 1996  Jim Blandy  <jimb@floss.cyclic.com>

	* boot-9.scm: Doc fixes.
	(make-module): Rework for readability.
	(make-root-module, make-scm-module): USES argument to make-module
 	should be '(), not #f.

	* boot-9.scm (try-load): %sys-load-path has been renamed to
	primitive-load-path; adjust call here.

Tue Oct 15 14:25:01 1996  Mikael Djurfeldt  <mdj@woody.nada.kth.se>

	* boot-9.scm (signal-handler): Bugfix: Moved the recording of
 	the stack to the correct place: when it is decided to generate an
	error-signal.

Mon Oct 14 22:20:30 1996  Mikael Djurfeldt  <mdj@woody.nada.kth.se>
