@@ -1,3 +1,8 @@
+Sun Oct 27 07:47:03 1996  Gary Houston  <ghouston@actrix.gen.nz>
+
+	* boot-9.scm (stat:dev etc.) accessor functions	for stat components.
+	(file-is-directory?): use stat:type.
+
 Fri Oct 25 03:34:47 1996  Jim Blandy  <jimb@floss.cyclic.com>
 
 	* boot-9.scm (%read-sharp): Don't recognize the `#!' syntax here;
